# smart_sorting_twin

./: .gitignore  Dockerfile  docker-compose.yaml
src/smart_factory_interface/: package.xml  setup.cfg  setup.py
src/smart_factory_interface/smart_factory_interface/: iot_bridge.py
src/smart_sorting/: CMakeLists.txt  package.xml
src/smart_sorting/launch/: run_move.launch.py
src/smart_sorting/src/: simple_move.cpp
src/web_dashboard/: app.py
